# course_work_3

./: .env  .env.sample  pyproject.toml  requirements.txt
config/: settings.py  urls.py
fixtures/: manager.json
mailing_management/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
mailing_management/management/commands/: add_clients.py  send_newsletter.py
mailing_management/migrations/: 0001_initial.py  0002_alter_messagemanagement_options.py  0003_alter_mailingclient_options_mailingclient_user_and_more.py  0004_alter_newsletter_options_mailingclient_owner_and_more.py  0005_alter_mailingclient_options_newsletterattempt_and_more.py  0006_alter_mailingclient_owner_alter_mailingclient_user.py  0007_remove_newsletterstatistics_user_and_more.py
mailing_management/templates/mailing_management/: base.html  client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  contacts.html  home.html  mail_sent.html  message_confirm_delete.html  message_detail.html  message_list.html  newsletter_confirm_delete.html  newsletter_detail.html  newsletter_form.html  newsletter_list.html  statistics.html
mailing_management/templates/mailing_management/includes/: client_card.html  inc_menu.html  (+2 more)
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_customuser_token.py  0003_alter_customuser_is_active.py
users/templates/users/: login.html  logout.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  register.html
(+1 files in other folders)
