[tool.poetry]
name = "course-work-3"
version = "0.1.0"
description = ""
authors = ["Polyaa <polinasatrajkina@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.6"
psycopg2 = "^2.9.10"
psycopg2-binary = "^2.9.10"
pillow = "^11.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
